tests/fixtures/invalid/pow_str_list_str.py
# Cannot call pow() with Str, List[int], Str
x = pow("hello", [1, 2, 3], "hello")
